--- a/index.html
+++ b/index.html
@@ -7,6 +7,28 @@
     <link rel="stylesheet" href="app.css">
 </head>
 <body>
-    
+    <main>
+        <div class="logo">
+            <img src="/images/virus.svg" alt="" class="covid-icon">
+            <h1>Covid-19</h1>
+        </div>
+        <nav class="navbar">
+            <ul class="navbar-list">
+                <li class="navbar-item"><a href="#/">Home</a></li>
+                <li class="navbar-item"><a href="#/about.html">Sobre</a></li>
+                <li class="navbar-item"><a href="#/contact.html">Contato</a></li>
+                <li class="navbar-item"><a href="#/references.html">Saiba mais</a></li>
+            </ul>
+        </nav>
+
+        <div class="container">
+
+        </div>
+    </main>
+    <footer class="footer">
+        <p>2020 &copy; Desenvolvido por Guilherme Guimarães Galli</p>
+    </footer>
+
+    <script src="app.js"></script>
 </body>
 </html>
