--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
             </ul>
         </nav>
 
-        <div class="container">
+        <div class="container"></div>
 
+        <div class="loading">
+            <div class="pulse"></div>
         </div>
     </main>
     <footer class="footer">
