--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
         <h3>Desenvolvedor Front-End</h3>
         <p>Olá, me chamo Guilherme, tenho 25 anos, moro na capital de São Paulo e atualmente sou desenvolvedor Front-End na empresa NFE.io.</p>
         <p>Sou bacharel em Ciência da Computação pela Universidade Paulista, possuo curso profissionalizante de Front-End realizado na escola SENAI de informática e possuo curso técnico de informática.</p>
-        <p>Tenho experiência de 2 anos na área e com certeza teria começado antes seu eu pudesse. Porém como a maioria dos jovem, me encontrava meio perdido em que carreira seguir, mesmo após o término da faculdade. Foi quando tive a curiosidade a oprtunidade de realizar um curso online (de webmaster na época) onde tive um contato mais profundo com HTML e CSS e dai foi surgindo o gosto por programação.</p>
+        <p>Tenho experiência de 2 anos na área e com certeza teria começado antes seu eu pudesse. Porém como a maioria dos jovem, me encontrava meio perdido em que carreira seguir, mesmo após o término da faculdade. Foi quando tive a curiosidade e a oportunidade de realizar um curso online (de webmaster na época) onde tive um contato mais profundo com HTML e CSS e dai foi surgindo o gosto por programação.</p>
         <p>Para me conhecer melhor acesse meu <a href="https://www.linkedin.com/in/guilherme-galli/">linkdin</a></p>
     </div>
 </section>
