add next when send form

--- a/contact.html
+++ b/contact.html
@@ -5,5 +5,6 @@
         <input type="text" name="email" placeholder="E-mail" required>
         <textarea name="message" rows="7" placeholder="Mensagem"></textarea>
         <input type="submit" value="Enviar">
+        <input type="hidden" name="_next" value="https://covid-19-gama-academy.netlify.app/"/>
     </form>
 </section>
